# reinforcement_learning_taxi

./: .gitignore  Prezentacja_RL_Radziszewski_Zernaczuk.pptx  README.md  pyproject.toml
notebooks/: 01_taxi_environment_exploration.ipynb  02_ppo_training.ipynb  03_dqn_training.ipynb  04_ppo_tuning_per_reward.ipynb  05_dqn_tuning_per_reward.ipynb  06_reward_comparison_tuned.ipynb
results/hyperparameter_tuning/dqn_per_reward/: dqn_default_best.yaml  dqn_distance_based_best.yaml  dqn_enhanced_best.yaml  dqn_modified_penalty_best.yaml  dqn_tuning_default.csv  dqn_tuning_distance_based.csv  dqn_tuning_enhanced.csv  dqn_tuning_modified_penalty.csv  dqn_tuning_summary.csv
results/hyperparameter_tuning/ppo_per_reward/: ppo_default_best.yaml  ppo_distance_based_best.yaml  ppo_enhanced_best.yaml  ppo_modified_penalty_best.yaml  ppo_tuning_default.csv  ppo_tuning_distance_based.csv  ppo_tuning_enhanced.csv  ppo_tuning_modified_penalty.csv  ppo_tuning_summary.csv
results/logs/ppo_baseline/: evaluations.npz  summary.txt  training_stats.json
results/reward_comparison_tuned/: dqn_reward_comparison_tuned.csv  ppo_reward_comparison_tuned.csv
src/reinforcement_learning_taxi/agents/: __init__.py  dqn_agent.py  ppo_agent.py
src/reinforcement_learning_taxi/configs/: dqn_config_baseline.yaml  ppo_config_baseline.yaml
src/reinforcement_learning_taxi/environments/: __init__.py  observation_wrappers.py  reward_wrappers.py
src/reinforcement_learning_taxi/evaluation/: __init__.py  metrics.py
src/reinforcement_learning_taxi/training/: __init__.py  dqn_trainer.py  ppo_trainer.py
(+419 files in other folders)
